--- a/Website/Site.master
+++ b/Website/Site.master
@@ -46,14 +46,15 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/">New Menu Sample</a>
                 </div>
                 <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
+                    <%-- This is the old menu level but you will only have root of menu items
+                        <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/About">About</a></li>
                         <li><a runat="server" href="~/Contact">Contact</a></li>
-                    </ul>
+                    </ul>--%>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
@@ -70,6 +71,26 @@
                             </ul>
                         </LoggedInTemplate>
                     </asp:LoginView>
+
+                    <%-- to create a vertical drop down menu control
+                        put it here right after the /asp:LoginView --%>
+
+                    <asp:Menu ID="MenuSample" runat="server" BackColor ="Black" BorderColor="Red"
+                         StaticMenuItemStyle-ForeColor ="White" StaticMenuItemStyle-VerticalPadding ="10px"
+                         StaticMenuItemStyle-HorizontalPadding ="10px" RenderingMode="List" Orientation="Horizontal"
+                         DynamicMenuStyle-BackColor ="Black" DynamicMenuStyle-ForeColor="White">
+
+                        <Items>
+                            <asp:MenuItem Text="Home" NavigateUrl="~/Default.aspx"></asp:MenuItem>
+                            <asp:MenuItem Text="DDLPages" Value="0">
+                                <asp:MenuItem Text="Page 1" NavigateUrl="~/SamplePages/SamplePage.aspx"></asp:MenuItem>
+                                <asp:MenuItem Text="Page 2" NavigateUrl="~/SamplePages/SamplePage2.aspx"></asp:MenuItem>
+                                <asp:MenuItem Text="Page 3" NavigateUrl="~/SamplePages/SamplePage3.aspx"></asp:MenuItem>
+                            </asp:MenuItem>
+                            <asp:MenuItem Text="About" NavigateUrl="~/About.aspx"></asp:MenuItem>
+                            <asp:MenuItem Text="Contact" NavigateUrl="~/Contact.aspx"></asp:MenuItem>
+                        </Items>
+                    </asp:Menu>
                 </div>
             </div>
         </div>
